<resources>
    <string name="app_name">MoneyTran</string>
    <string name="recipient_name">John Wick</string>
    <string name="recipient_account_number">GB42 PRTC 0099 8500 0846 69</string>

    <string name="primary_account">Primary Account</string>
    <string name="total_balance">Total balance in EUR: €4,099.12</string>

    <string name="account_caption">USE ACCOUNT</string>

    <string name="currency">United States Dollar</string>
    <string name="currency_balance">2,315.26 USD</string>

    <string name="caption_amount">AMOUNT</string>

    <string name="fee">Fee</string>

    <string name="continue_button">Continue</string>

    <string name="default_fee_amount_hint">$0.00</string>
    <string name="default_amount_hint">$0.00</string>

    <string name="content_description_recipient_avatar">Recipient Avatar</string>
    <string name="content_description_create">Create</string>
    <string name="content_description_account_balance">Account Balance</string>
    <string name="content_description_currency_flag">Currency flag</string>
    <string name="content_description_info">Info</string>
    <string name="choose_currency_title">Choose currency</string>
    <string name="send_money_title">Send money to</string>

    <string name="euro_name">EURO</string>
    <string name="euro_balance">4,099.12 EUR</string>
    <string name="usd_name">United States Dollar</string>
    <string name="usd_balance">2,315.26 USD</string>
    <string name="gbp_name">British Pound</string>
    <string name="gbp_balance">854.23 GBP</string>
    <string name="rub_name">Russian Ruble</string>
    <string name="rub_balance">0.00 RUB</string>
    <string name="cny_name">Chinese Yuan</string>
    <string name="cny_balance">0.00 CNY</string>
    <string name="jpy_name">Japanese Yen</string>
    <string name="jpy_balance">0.00 JPY</string>
    <string name="uah_name">Ukrainian Hryvnia</string>
    <string name="uah_balance">0.00 UAH</string>

    <string name="cancel_button">Cancel</string>
    <string name="done_button">Done</string>

    <string name="wrong_user_input">Please, input correct amount</string>
    <string name="empty_user_input">Please, input amount</string>
</resources>